split up pipelines and jobs in manager api
