# internal/persistence/database/model/pipeline.go
@@ -1,6 +1,9 @@
 package model
 
-import "github.com/zebresel-com/mongodm"
+import (
+	"github.com/zebresel-com/mongodm"
+	"gitlab.strictlypaste.xyz/ko1n/dips/pkg/pipeline"
+)
 
 // TODO: properties struct
 // TODO: task struct should contain all necessary infos + unique ids
@@ -8,20 +11,8 @@ import "github.com/zebresel-com/mongodm"
 // Pipeline - Database struct describing a pipeline
 type Pipeline struct {
 	mongodm.DocumentBase `json:",inline" bson:",inline"`
-	Script               string `json:"script" bson:"script" required:"true"`
+	Script               string             `json:"script" bson:"script" required:"true"`
+	Name                 string             `json:"name" bson:"name" required:"true"`
+	Pipeline             *pipeline.Pipeline `json:"pipeline" bson:"pipeline"`
 	// TODO: properties
-	Name   string           `json:"name" bson:"name" required:"true"`
-	Stages []*PipelineStage `json:"stages" bson:"stages"`
-}
-
-// PipelineStage - Database struct describing a pipeline stage
-type PipelineStage struct {
-	Name  string          `json:"name" bson:"name" required:"true"`
-	Tasks []*PipelineTask `json:"tasks" bson:"tasks"`
-}
-
-// PipelineTask - Database struct describing a pipeline stage task
-type PipelineTask struct {
-	ID   uint   `json:"id" bson:"id" required:"true"`
-	Name string `json:"name" bson:"name" required:"true"`
 }
